@startuml Design Class Model

    ' STATIC
    class AppController {
        io : IOController
        sc : SentenceController
        tc : TemplateController
        wp : WordPicker
        start() : void
        getValidSentence() : String
    }

    ' SINGLETON
    class IOController {
        instance : IOController
        scanner : Scanner
        getInstance() : IOController
        inputSentence() : String
        showInputError() : void
        displaySentence(sentenceDesc : String, flag : int) : void
        showValidationError() : void
        showSyntacticTree() : void
        showToxicityError() : void
        showToxicityResults(toxicityLabel : String, toxicityLevel : double) : void
    }

    ' SINGLETON
    class SentenceController {
        instance : SentenceController
        inputSentence : Sentence
        nonsenseSentence : Sentence
        currentSentence : Sentence
        state : boolean
        getInstance() : SentenceController
        createSentence(sentenceDesc : String) : void
        generateSentence() : void
        getSyntacticTree() : SyntacticNode
    }

    ' SINGLETON
    class SentenceGenerator {
        instance : SentenceGenerator
        sentenceDesc : String
        fillingWords : Map<String, List<String>>
        getInstance() : SentenceGenerator
        generateSentenceDesc() : void
    }
    
    class Sentence {
        sentenceDesc : String
        syntacticTree : SyntacticNode
        setSentenceTree(syntacticTree : SyntacticNode) : void
        getSentenceDesc() : String
        getSentenceTree() : SyntacticNode
    }

    class SyntacticNode {
        text : String
        lemma : String
        partOfSpeech : String
        dependency : String
        node : List<SyntacticNode>
        addChild(child : SyntacticNode, dependency : String) : void
        printTree(root : String) : String
    }

    ' SINGLETON
    class TemplateController {
        instance : TemplateController
        template : Template
        s : SentenceStructures
        getInstance() : TemplateController
        generateTemplate() : void
        getWordCount() : int[]
        getTemplateDesc() : String
    }

    ' SINGLETON
    class TemplateGenerator {
        instance : TemplateGenerator
        combinations : Map<Integer, List<int[]>>
        getInstance() : TemplateGenerator
        generateTemplate() : Template
    }

    class Template {
        templateDesc : String
        templateWords : int[]
    }
    
    ' STATIC
    class Analyzer {
        analyzeSentence(sentenceDesc : String) : void
        buildSyntacticTree(jsonInput : String) : SyntacticNode
    }

    ' SINGLETON
    class Validator {
        instance : Validator
        maxName : String
        maxConfidence : double
        criticValue : double
        getInstance() : Validator
        verifySentence(input : String) : boolean
        validateSentenceStructure(syntacticTree : SyntacticNode) : boolean
        verifyToxicity(sentenceDesc : String) : boolean
    }

    ' STATIC
    class ApiCaller {
        getSyntaxAnalysis(sentenceDesc : String) : String
        getToxicityAnalysis(sentenceDesc : String) : String
        getApiKey() : String
        makeCall(url : String, payload : String) : String
    }

    ' SINGLETON
    class WordPicker {
        instance : WordPicker
        generatedWords : Map<String, List<String>>
        numOfRetries : int
        getInstance() : WordPicker
        startWordsExtraction() : void
        pickSentenceWords() : void
        getWords() : Map<String, List<String>>
        analyzeSyntacticTree(syntactictree : SyntacticNode) : void
        loopOnNodes(node : SyntacticNode) : void
        resetNumOfRetries() : void
    }

    class SentenceStructures {
        structures : File
        dimension : int
        getRandomStructure() : String
    }

    ' SINGLETON
    class SystemDictionary {
        nouns : Nouns
        verbs : Verbs
        adjectives : Adjectives
        instance : SystemDictionary
        getInstance() : SystemDictionary
        createDictionary(nouns : List<String>, verbs : List<String>, adjectives : List<String>) : Map<String, List<String>>
        setupWordDic(path : String) : void
        initializeDic(path : String) : void
        pickDictionaryWords(words : int[]) : Map<String, List<String>>
    }

    class Nouns {
        nouns : List<String>
        getNouns(count : int) : List<String>
    }

    class Verbs {
        verbs : List<String>
        getVerbs(count : int) : List<String>
    }

    class Adjectives {
        adjectives : List<String>
        getAdjectives(count : int) : List<String>
    }

    '-----------------------------------------------------------------

    Nouns -* SystemDictionary
    Verbs -* SystemDictionary
    Adjectives -* SystemDictionary
    SyntacticNode -* Sentence
    SentenceStructures -o TemplateController

    AppController "1" <--> "1" IOController : i/o handling
    AppController "1" <--> "1" SentenceController : sentence handling
    AppController "1" <--> "1" TemplateController : template handling
    AppController "1" <--> "1" Validator : validation handling

    SentenceController "1" <-- "1" SentenceGenerator : generates for
    SentenceController "1" --> "1" SentenceGenerator : provides generation info to
    SentenceController "1" <--> "1" Analyzer : analysis handling
    SentenceController "1" --> "*" Sentence : manages

    TemplateController "1" <-- "1" TemplateGenerator : generates for
    TemplateController "1" --> "1" TemplateGenerator : provides sentence structures to
    TemplateController "1" --> "1" Template : manages

    WordPicker "1" <-- "1" SentenceController : gets picked words from
    WordPicker "1" --> "1" SentenceController : picks sentence words from
    WordPicker "1" --> "1" TemplateController : gets template info from
    WordPicker "1" --> "1" SystemDictionary : picks words from

    Validator "1" --> "1" ApiCaller : calls
    Validator "1" <-- "1" ApiCaller : provides toxicity analysis to 

    Analyzer "1" --> "1" ApiCaller : calls
    Analyzer "1" <-- "1" ApiCaller : provides sintax analysis to 
    
@enduml